Code polishment